feat: update user-related paths, enhance exception handling, and improve validation logic